# AI-Based-Rewards-Maximiser

./: README.md  demo.py  pyproject.toml  requirements.txt  test_1.py  test_2.py  test_3.py  test_liteapi.py
app/: main.py
app/agents/: rewards_agent.py
app/api/routes/: agent.py  booking.py  cards.py  conversion.py  hotels.py  liteapi.py  rag.py
app/core/: config.py
app/models/: schemas.py
app/rag/: rag_engine.py
app/rag/chroma_db/: chroma.sqlite3
app/rag/knowledge_base/: amex_gold.txt  capital_one_venture_x.txt  chase_sapphire_preferred.txt  citi_premier.txt  hotel_programs.txt  redemption_strategy.txt
app/services/: amadeus_service.py  card_service.py  conversion_engine.py  liteapi_service.py  rewardscc_service.py
