[project]
name = "optivoy-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.3.0",
    "boto3==1.34.0",
    "chromadb==0.5.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "langchain==0.2.0",
    "langchain-anthropic==0.1.15",
    "langchain-community==0.2.0",
    "langchain-core>=0.2.43",
    "langchain-openai==0.1.8",
    "langgraph==0.1.1",
    "openai==1.30.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "uvicorn[standard]==0.29.0",
]
